--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -15,6 +15,7 @@
     rgba(15, 15, 17, 0) 0%,
     rgb(16, 15, 17) 40%
   );
+  height: 100vh;
 }
 
 .Nao_Degrade_Inicio_Site {
@@ -56,7 +57,7 @@
   text-align: center;
 }
 .No_Margin_Em_Cima {
-  margin: 0;
+  margin: 2px 0 25px 0;
 }
 .Container_Icon_Beneficios {
   padding: 5px 0 0 0;
